prusti-tests/tests/verify_overflow/ui/core_proof/counterexamples/custom_ce-1.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/custom_ce-1.rs:30:11
   |
30 | #[ensures(!result)]
   |           ^^^^^^^
   |
note: the error originates here
  --> $DIR/custom_ce-1.rs:31:1
   |
31 | / fn test1(x: X<i32>, a: i32, y: Y) -> bool{
32 | |     prusti_assume!(a > 0);
33 | |     x.a + y.0 == a
34 | | }
   | |_^
note: counterexample for "x"
       value:   a = 1; b = 0 = 0 = b
  --> $DIR/custom_ce-1.rs:31:10
   |
31 | fn test1(x: X<i32>, a: i32, y: Y) -> bool{
   |          ^
note: counterexample for "a"
       value:   2
  --> $DIR/custom_ce-1.rs:31:21
   |
31 | fn test1(x: X<i32>, a: i32, y: Y) -> bool{
   |                     ^
note: counterexample for "y"
       value:   unnamed field of Y = 1
  --> $DIR/custom_ce-1.rs:31:29
   |
31 | fn test1(x: X<i32>, a: i32, y: Y) -> bool{
   |                             ^
note: counterexample for "result"
       value:   true
  --> $DIR/custom_ce-1.rs:33:5
   |
33 |     x.a + y.0 == a
   |     ^^^^^^^^^^^^^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/custom_ce-1.rs:37:19
   |
37 | fn test2(z: Z) -> bool{
   |                   ^^^^
   |
note: the error originates here
  --> $DIR/custom_ce-1.rs:37:1
   |
37 | / fn test2(z: Z) -> bool{
38 | |     match z {
39 | |         Z::E{ g:1, h: 2, i:3 } => false,
40 | |         _ => true,
41 | |     }
42 | | }
   | |_^
note: counterexample for "z"
       value:   values: 1, 2, 3
  --> $DIR/custom_ce-1.rs:37:10
   |
37 | fn test2(z: Z) -> bool{
   |          ^
note: counterexample for "result"
       value:   false
  --> $DIR/custom_ce-1.rs:39:35
   |
39 |         Z::E{ g:1, h: 2, i:3 } => false,
   |                                   ^^^^^

error: aborting due to 2 previous errors

